--- a/NetEaseSparkTraining.html
+++ b/NetEaseSparkTraining.html
@@ -104,7 +104,7 @@
         height: 92%;
         float: left;
       }
-      .left-column h2:last-of-type, .left-column h3:last-child {
+      .left-column h2:last-of-type, .left-column h3:last-of-type {
         color: #000;
       }
       .right-column {
@@ -751,7 +751,7 @@ object WordCount extends App {
     .appName("StructuredNetworkWordCount")
     .getOrCreate()
   import spark.implicits._
-
+  // represents an unbounded table containing the streaming text data
   val lines = spark.readStream
     .format("socket")
     .option("host", "localhost")
@@ -766,14 +766,177 @@ object WordCount extends App {
   query.awaitTermination()
 }
 ```
+```
+nc -lk 9999
+```
+]
+
+???
+
+Structured Streaming 也是先纯定义、再触发执行的模式，即
+    前面大部分代码是 纯定义 Dataset/DataFrame 的产生、变换和写出
+    后面位置再真正 start 一个新线程，去触发执行之前的定义
+在新的执行线程里我们需要 持续地 去发现新数据，进而 持续地 查询最新计算结果至写出
+    这个过程叫做 continous query（持续查询）
+
+---
+class:
+name:structuredstreamingprogramingmodel
+
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+]
+.right-column[
+### unbounded input table
+<img src="imgs/streamingtable.png">
+
+The key idea in Structured Streaming is to treat a live data stream as a table that is being continuously appended
 
 ]
+
+???
+基于“无限增长的表格”的编程模型
+
+与静态的 structured data 不同，动态的 streaming data 的行列数据表格是一直无限增长的
+
+---
+class:
+name:structuredstreamingprogramingmodelbasic
+
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+  ##### - Basic Concepts
+]
+.right-column[
+### Input Table
+<img src="imgs/structured-streaming-stream-as-a-table.png" style="zoom:0.50">
+
+Consider the input data stream as the “Input Table”. Every data item that is arriving on the stream is like a new row being appended to the Input Table.
+
+]
+
+---
+class:
+name:structuredstreamingprogramingbasic2
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+  ##### - Basic Concepts
+]
+.right-column[
+### Result Table
+<img src="imgs/structured-streaming-model.png" style="zoom:0.45">
+
+Every trigger interval(say, every 1 second), new rows get appended to the Input Table, which eventually updates the Result Table. Whenever the result table gets updated, we would want to write the changed result rows to an external sink.
+]
+---
+class:
+name:structuredstreamingprogramingmodelbasic3
+
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+  ##### - Basic Concepts
+]
+
+.right-column[
+### Output
+
+The “Output” is defined as what gets written out to the external storage.
+
+- Complete Mode
+  - The entire updated Result Table will be written to the external storage. It is up to the storage connector to decide how to handle writing of the entire table.
+
+- Append Mode
+  - Only the new rows appended in the Result Table since the last trigger will be written to the external storage. This is applicable **ONLY** on the queries where existing rows in the Result Table are not expected to change.
+
+- Update Mode
+  - Only the rows that were updated in the Result Table since the last trigger will be written to the external storage . Note that this is different from the Complete Mode in that this mode only outputs the rows that have changed since the last trigger. If the query doesn’t contain aggregations, it will be equivalent to Append mode.
+]
+---
+
+class:
+name:structuredstreamingprogramingmodelexample
+
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+  ##### - Basic Concepts
+
+]
+.right-column[
+### Quick Example
+<img src="imgs/structured-streaming-example-model.png" style="zoom:0.45">
+
+In this model, Spark is responsible for updating the Result Table when there is new data, thus relieving the users from reasoning about fault-tolerance, and data consistency(at-least-once, or at-most-once, or exactly-once)
+]
+
+---
+
+class:
+name:structuredstreamingprogramingmodelexample
+
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+  ##### - Basic Concepts
+  ##### - Handling Event-time and Late Data
+]
+.right-column[
+### Quick Example
+<img src="imgs/structured-streaming-example-model.png" style="zoom:0.45">
+
+In this model, Spark is responsible for updating the Result Table when there is new data, thus relieving the users from reasoning about fault-tolerance, and data consistency(at-least-once, or at-most-once, or exactly-once)
+]
+
+---
+
+class:
+name:structuredstreamingprogramingmodelexample
+
+.left-column[
+  ## Structured Streaming
+  ### - Overview
+  ### - QuickStart
+  ### - Programming Model
+  ##### - Basic Concepts
+  ##### - Handling Event-time and Late Data
+  ##### - Fault Tolerance Semantics
+]
+.right-column[
+### Fault Tolerance Semantics
+Delivering **end-to-end exactly-once** semantics was one of key goals behind the design of Structured Streaming
+
+<img src="imgs/exactly-only-once.png" style="zoom:0.30">
+
+ Structured Streaming sources, the sinks and the execution engine reliably track the exact progress of the processing so that it can handle any kind of failure by **restarting** and/or **reprocessing**.
+  - **replayable sources** is assumed to have offsets (similar to Kafka offsets, or Kinesis sequence numbers) to track the read position in the stream.
+  - The engine uses **checkpointing** and **write ahead logs** to record the offset range of the data being processed in each trigger.
+  - **idempotent sinks** for handling reprocessing
+]
+
 ---
 
 class: middle, center, inverse
 name: greetings
 # Thank You!
 ### [Kent Yao]
+
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
 
 
 
