Update and rename NetEaseSparkTrainingSQL.html to SparkSQLBasics.html

--- a/slides/SparkSQLBasics.html
+++ b/slides/SparkSQLBasics.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>NetEase Spark Training - Spark SQL</title>
+    <title>Spark SQL Basics</title>
     <meta charset="utf-8">
     <style>
         @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -137,15 +137,12 @@
 
 class: center, middle, inverse
 
-# NetEase Spark Training
-## Spark SQL
+
+# Spark SQL Basics
 ### [Kent Yao]
 
-???
-大家好！
-
 ---
-
+    
 class:
 name: sparksql
 
